 logger: move capabilities into its own file, add features
 logger: Only create database columns, and only try to log, supported pids
 logger: add serial port logging option
 cmake: default gps dev [for ui] separately compile-time configurable
 logger: Dbus support, announce obd samples using SYSTEM dbus
 logger: reset elm device when we begin, and when we exit

Version 0.5 (released 2009-05-22)
 Move common obdinfo into its own library
 add to obdinfo so programs can know units, max, min, etc
 obdgpslogger: Convert values returned from obd to actual numbers
 obdgpslogger: option to list supported PIDs in current OBD device
 obd2kml: add graph of vss/rpm [roughly "gear ratio"]
 obdgpslogger,obdgui: Take out start/stop trip buttons
 obdgui: Set dial ranges based on real value ranges
 obdgpslogger: Do not disable the gps database functions
 obdgpslogger: Portability improvements in signal handling
 cmake: Create a configure.h file so string #defs will work with xcode
 obdgui: Add a gpsd launch wizard
 cmake: Use cpack to build packages.
 cmake: Create app bundle, including gpsd on osx
 obdgui: Make some semi-educated guesses about device names

Version 0.4 (released 2009-04-10)
 Add obdgui
 obdgpslogger: Add option to spam engine info to stdout
 obdgpslogger: Accept SIGUSR{1,2} to start and stop trips
 obdgpslogger: always create gps table to avoid SQL breakage
 obdgpslogger: optimisation options
 obdgpslogger: printf/fprintf(stderr) tidying
 obdgpslogger: clean up trip handling when going through gui
 obdgpslogger: Add log window in GUI that shows all output from logger
 obd2csv,obd2kml: provide progress output if requested

Version 0.3 (released 2009-04-01)
 Add obd2csv
 obdgpslogger: samplerate [-a] now works
 obdgpslogger: time inserted as a real for sub-second usefulness
 obdgpslogger: getobdvalue returns a useful status value
 obdgpslogger: support for "trips", when the engine stops and starts
 obd2kml: do something useful with trips
