@@ -1,0 +1,11 @@
+INCLUDE_DIRECTORIES(
+	.
+)
+
+
+FILE(GLOB OBDCONFIGFILE_SRCS
+	*.c
+)
+
+ADD_LIBRARY(ckobdconfigfile STATIC ${OBDCONFIGFILE_SRCS})
+
