@@ -6,6 +6,7 @@
 #cmakedefine OBD_DEFAULT_GPSPORT "@OBD_DEFAULT_GPSPORT@"
 #cmakedefine OBD_DEFAULT_SERIALPORT "@OBD_DEFAULT_SERIALPORT@"
 #cmakedefine OBD_DEFAULT_DATABASE "@OBD_DEFAULT_DATABASE@"
+#cmakedefine OBD_CONFIG_FILENAME "@OBD_CONFIG_FILENAME@"
 
 #endif // OBDCONFIG_H
 
